2018-12-21: 2.0.0 (aee40cd)
- Initial version