@@ -1,2 +1,5 @@
 2018-12-21: 2.0.0 (aee40cd)
 - Initial version
+
+2019-07-01: 2.0.1 <unknown>
+- Fixed alignment of atomic timeout member in IP connection.
